--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <form class="container-fluid dog-image">     
         <div class="row">
             <div class="col-md-2">
-                <button type="button" class="btn btn-info " onclick="Getnew()">Discover new!!!</button>
+                <button type="button" class="btn btn-info " onclick="Getnew()">NEXT</button>
                 
                 <button type="button" class="btn btn-danger " onclick="liked()">like</button>
 
